@@ -4,12 +4,12 @@
 #	corresponding tclUniData.c file with compressed character
 #	data tables.  The input to this program should be the latest
 #	UnicodeData file from:
-#	    ftp://ftp.unicode.org/Public/UNIDATA/UnicodeData-Latest.txt
+#	    ftp://ftp.unicode.org/Public/UNIDATA/UnicodeData.txt
 #
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 # 
-# RCS: @(#) $Id: uniParse.tcl,v 1.4.16.4 2010/10/15 18:24:08 dgp Exp $
+# RCS: @(#) $Id: uniParse.tcl,v 1.4.16.5 2010/10/19 12:33:00 dgp Exp $
 
 
 namespace eval uni {
@@ -116,7 +116,11 @@ proc uni::buildTables {data} {
 
 	set items [split $line \;]
 
-	scan [lindex $items 0] %4x index
+	scan [lindex $items 0] %x index
+	if {$index > 0xFFFF} then {
+	    # Ignore non-BMP characters, as long as Tcl doesn't support them
+	    continue
+	}
 	set index [format 0x%0.4x $index]
 
 	set gIndex [getGroup [getValue $items $index]]
